[gd_scene load_steps=3 format=3 uid="uid://dk4v656rwhbh0"]

[ext_resource type="Script" uid="uid://bega55vsf4n7m" path="res://building/scripts/building.gd" id="1_f1gjg"]
[ext_resource type="PackedScene" uid="uid://kku02qq4id10" path="res://building/scenes/building_ghost.tscn" id="3_0rysw"]

[node name="StaticBody2D" type="StaticBody2D"]
z_as_relative = false
input_pickable = true
script = ExtResource("1_f1gjg")
metadata/_edit_group_ = true

[node name="ConstructionTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Ghost" parent="." instance=ExtResource("3_0rysw")]

[node name="TroopRecruitmentTimer" type="Timer" parent="."]
one_shot = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="ConstructionTimer" to="." method="_on_construction_timer_timeout"]
[connection signal="timeout" from="TroopRecruitmentTimer" to="." method="_on_troop_recruitment_timer_timeout"]
